# Comp653StockMLModel

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  push_to_zach.ps1  pyproject.toml  sync_from_zach.ps1
.github/workflows/: ci.yml
configs/: config.yaml
configs/data/: crypto_yfinance.yaml  equities_kaggle.yaml  equities_yfinance.yaml
configs/features/: standard_technicals.yaml
configs/labels/: multi_horizon_returns.yaml  quantile_returns.yaml  regime_classes.yaml  sequence_returns.yaml
configs/model/: lightgbm.yaml  linear.yaml  lstm.yaml  online_linear.yaml  tcn.yaml  transformer.yaml  (+1 more)
data/: README.md
docs/: architecture.md  literature_review.md  model_derivations.tex  proposal_revised.md
models/: lgbm_full.txt  multiscale_daily.npz  multiscale_intraday_5m.npz
notebooks/: 01_data_quality.ipynb  02_lightgbm_baseline.ipynb  03_presentation.ipynb
outputs/: cross_section_out.txt  cv_results.csv  cv_results_course.csv  cv_results_unified.csv  final_results_course.csv  final_results_unified.csv  run_log.txt
scripts/: __init__.py  absolute_crosssection.py  bias_variance.py  build_store.py  checking_crypto.py  cross_section  fine_tune.py  generate_figures.py  intraday_run.py  main.py  make_derivation_figures.py  multiscale_run.py  pipeline.py  pipeline_course.py  pipeline_full.py  quantile_run.py  rebuild_pptx.py  rf_vs_lightgbm_importance.py  ridge_lasso.py  term_structure_all.py  term_structure_run.py  train_lightgbm.py  transfer_eval.py  update_notebook.py
src/ucn/: utils.py  (+2 more)
tests/: conftest.py  test_end_to_end.py  test_labels.py  test_metrics.py  test_preprocessing.py  test_smoke.py  test_splits.py  test_technicals.py
(+64 files in other folders)
